--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -32,7 +34,7 @@
     margin-bottom: 20px;
 }
 
-.button{
+button{
     border: 0;
     border-radius: 5px;
     margin-top: 50px;
